--- a/catlady/css/one-page-wonder.css
+++ b/catlady/css/one-page-wonder.css
@@ -44,6 +44,9 @@ body {
 .featurette-heading {
     font-size: 50px;
 }
+.portfolio-item {
+    margin-bottom: 25px;
+}
 /* GAUGE */
     .activity-gauge {
       border-radius: 220px 220px 0 0;
